--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "projectx",
+  "name": "ciencia-tecnologia",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,9 +13,9 @@
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/LucasEfdl/ProjectX/issues"
+    "url": "https://github.com/TIHeitorDS/ciencia-tecnologia/issues"
   },
-  "homepage": "https://github.com/LucasEfdl/ProjectX#readme",
+  "homepage": "https://github.com/TIHeitorDS/ciencia-tecnologia#readme",
   "dependencies": {
     "bootstrap": "^5.3.0-alpha1",
     "bootstrap-icons": "^1.10.5"
